@@ -106,7 +106,7 @@ LEVEL_UNSTATIC_CHANCE = 6
 # If n (max==8) monsters surrounds her/him, the chance of interference would be
 #    1 - (1 - SPELL_INTERFERE / 100)^n
 # Please note that setting this too high makes spellcaster-classes *very* hard
-# to survive. 2-5 might be suffisant.
+# to survive. 4-8 might be suffisant.
 SPELL_INTERFERE = 0
 
 # Option : set the number of minutes that a player will be automatically retired
